- Fixes for flashtorch (Saliency maps) - misc improvements

--- a/HGNN/dataPrep/Create cleaned metadata.ipynb
+++ b/HGNN/dataPrep/Create cleaned metadata.ipynb
@@ -32,11 +32,11 @@
    "source": [
     "dataPath=\"/data/BGNN_data\"\n",
     "image_path='INHS_cropped'\n",
-    "output_directory_name=\"biology_paper_cleaned_50max\"\n",
+    "output_directory_name=\"biology_paper_cleaned_30max\"\n",
     "cleaned_species_csv_fileName = \"cleaned_metadata.csv\"\n",
-    "species_csv_fileName = \"metadata.csv\"\n",
-    "numberOfImagesPerSpecies_min =100 # If None, no min\n",
-    "numberOfImagesPerSpecies_toKeep =200 # If None, keep all"
+    "species_csv_fileName = \"biology_paper_cleaned_all/cleaned_metadata.csv\"\n",
+    "numberOfImagesPerSpecies_min =None # If None, no min\n",
+    "numberOfImagesPerSpecies_toKeep =30 # If None, keep all"
    ]
   },
   {
@@ -55,20 +55,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "output                    fileName           scientificName     Genus         Family\n",
-      "0      INHS_FISH_103994.jpg         Gambusia affinis  Gambusia    Poeciliidae\n",
-      "1      INHS_FISH_108425.jpg      Notropis stramineus  Notropis     Cyprinidae\n",
-      "2       INHS_FISH_59772.jpg        Lepomis cyanellus   Lepomis  Centrarchidae\n",
-      "3        INHS_FISH_4051.jpg          Noturus gyrinus   Noturus    Ictaluridae\n",
-      "4       INHS_FISH_21948.jpg    Notropis atherinoides  Notropis     Cyprinidae\n",
-      "...                     ...                      ...       ...            ...\n",
-      "22930   INHS_FISH_45549.jpg      Notropis telescopus  Notropis     Cyprinidae\n",
-      "22935   INHS_FISH_95162.JPG  Morone mississippiensis    Morone      Moronidae\n",
-      "22949   INHS_FISH_82558.jpg      Notropis telescopus  Notropis     Cyprinidae\n",
-      "22959   INHS_FISH_77892.jpg           Noturus exilis   Noturus    Ictaluridae\n",
-      "22961   INHS_FISH_87269.jpg          Lepomis auritus   Lepomis  Centrarchidae\n",
+      "output       Unnamed: 0  Unnamed: 0.1              fileName         scientificName  \\\n",
+      "0              0             0  INHS_FISH_103994.jpg       Gambusia affinis   \n",
+      "1              1             1  INHS_FISH_108425.jpg    Notropis stramineus   \n",
+      "2              2             2   INHS_FISH_59772.jpg      Lepomis cyanellus   \n",
+      "3              3             3    INHS_FISH_4051.jpg        Noturus gyrinus   \n",
+      "4              4             4   INHS_FISH_21948.jpg  Notropis atherinoides   \n",
+      "...          ...           ...                   ...                    ...   \n",
+      "7458        7458          7759     INHS_FISH_935.JPG    Alosa chrysochloris   \n",
+      "7777        7777          8091   INHS_FISH_24054.JPG    Alosa chrysochloris   \n",
+      "8328        8328          8662   INHS_FISH_25512.JPG    Alosa chrysochloris   \n",
+      "8445        8445          8782   INHS_FISH_91608.JPG    Alosa chrysochloris   \n",
+      "8486        8486          8827   INHS_FISH_38721.JPG    Alosa chrysochloris   \n",
       "\n",
-      "[6695 rows x 4 columns]\n"
+      "         Genus         Family  \n",
+      "0     Gambusia    Poeciliidae  \n",
+      "1     Notropis     Cyprinidae  \n",
+      "2      Lepomis  Centrarchidae  \n",
+      "3      Noturus    Ictaluridae  \n",
+      "4     Notropis     Cyprinidae  \n",
+      "...        ...            ...  \n",
+      "7458     Alosa      Clupeidae  \n",
+      "7777     Alosa      Clupeidae  \n",
+      "8328     Alosa      Clupeidae  \n",
+      "8445     Alosa      Clupeidae  \n",
+      "8486     Alosa      Clupeidae  \n",
+      "\n",
+      "[1140 rows x 6 columns]\n"
      ]
     }
    ],
