--- a/HGNN/train/ConfigParserWriter-GridExperiments.ipynb
+++ b/HGNN/train/ConfigParserWriter-GridExperiments.ipynb
@@ -29,7 +29,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "experimentName = \"biology_paper_200max_cleaned\"\n",
+    "experimentName = \"biology_paper_datasizes_HGNN_bestLambda\"\n",
     "\n",
     "\n",
     "# When adding a new parameter:\n",
@@ -48,12 +48,12 @@
     "    \"augmented\": True,\n",
     "\n",
     "    # training\n",
-    "    \"batchSize\": 16, # Bigger is more stable\n",
+    "    \"batchSize\": 64, # Bigger is more stable\n",
     "    \"learning_rate\":0.00005, # 0.00005\n",
     "    \"numOfTrials\":5,\n",
     "    \"fc_layers\": 1,\n",
-    "    \"modelType\":\"HGNN_add\", #BB DISCO DSN HGNN HGNN_add HGNN_cat\n",
-    "    \"lambda\": 0.6,\n",
+    "    \"modelType\":\"BB\", #BB DISCO DSN HGNN HGNN_add HGNN_cat\n",
+    "    \"lambda\": 0.01,\n",
     "    \"unsupervisedOnTest\": False,\n",
     "    \"tl_model\": \"ResNet18\", # Keep 'ResNet18', 'ResNet50', 'CIFAR', 'NIN'\n",
     "    \"link_layer\": \"avgpool\", # layer name should be consistent with tl_model layer names. avgpool,\"layer3\"\n",
@@ -78,7 +78,7 @@
     {
      "data": {
       "text/plain": [
-       "'/home/elhamod/HGNN/experiments/biology_paper_dataset_differentModels_layers/params.json'"
+       "'/home/elhamod/HGNN/experiments/biology_paper_datasizes_BB_bestLambda/params.json'"
       ]
      },
      "execution_count": 3,
@@ -90,9 +90,14 @@
     "cp = ConfigParser(experimentsPath, dataPath, experimentName)\n",
     "\n",
     "hyperp_params = {\n",
-    "#     \"modelType\":[\"HGNN_add\",\"HGNN_cat\"]\n",
+    "#     \"modelType\":[\"BB\",\"HGNN_cat\"]\n",
     "#     \"dummy\":[0]\n",
-    "    \"dataset_norm\":[\"layer2\",\"layer4\",\"avgpool\"],\n",
+    "    \"suffix\":[\"biology_paper_cleaned_10max\",\n",
+    "              \"biology_paper_cleaned_15max\",\n",
+    "              \"biology_paper_cleaned_30max\",\n",
+    "              \"biology_paper_cleaned_50max\",\n",
+    "              \"biology_paper_cleaned_100max\",\n",
+    "              \"biology_paper_cleaned_200max\",],\n",
     "    \n",
     "#     \"img_res\": [448],\n",
     "#     \"learning_rate\": [0.00005, 0.0001, 0.0005, 0.001, 0.01, 0.1],\n",
@@ -120,12 +125,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'image_path': 'INHS_cropped', 'suffix': 'biology_paper_200max', 'training_count': 0.64, 'validation_count': 0.16, 'batchSize': 64, 'n_epochs': 500, 'learning_rate': 5e-05, 'numOfTrials': 3, 'patience': 10, 'fc_width': 200, 'fc_layers': 1, 'modelType': 'DISCO', 'lambda': 0.6, 'unsupervisedOnTest': False, 'tl_model': 'ResNet18', 'augmented': True, 'weight_decay': 0.0001, 'img_res': 448, 'tl_freeze': False, 'cnn_layers': 0, 'cnn_channels': 128, 'pretrained': True, 'two_nets': True, 'link_layer': 'layer3', 'dataset_norm': 'layer2', 'aug_profile': 'withRotation_PCA1.5'}\n",
-      "models/63c73f56db4a1f2e92eee932982d8477944a27359e624c4ed2c963c5\n",
-      "{'image_path': 'INHS_cropped', 'suffix': 'biology_paper_200max', 'training_count': 0.64, 'validation_count': 0.16, 'batchSize': 64, 'n_epochs': 500, 'learning_rate': 5e-05, 'numOfTrials': 3, 'patience': 10, 'fc_width': 200, 'fc_layers': 1, 'modelType': 'DISCO', 'lambda': 0.6, 'unsupervisedOnTest': False, 'tl_model': 'ResNet18', 'augmented': True, 'weight_decay': 0.0001, 'img_res': 448, 'tl_freeze': False, 'cnn_layers': 0, 'cnn_channels': 128, 'pretrained': True, 'two_nets': True, 'link_layer': 'layer3', 'dataset_norm': 'layer4', 'aug_profile': 'withRotation_PCA1.5'}\n",
-      "models/f63045e8ae0f2300166dbb0a196734932b869847f81548167e4289b4\n",
-      "{'image_path': 'INHS_cropped', 'suffix': 'biology_paper_200max', 'training_count': 0.64, 'validation_count': 0.16, 'batchSize': 64, 'n_epochs': 500, 'learning_rate': 5e-05, 'numOfTrials': 3, 'patience': 10, 'fc_width': 200, 'fc_layers': 1, 'modelType': 'DISCO', 'lambda': 0.6, 'unsupervisedOnTest': False, 'tl_model': 'ResNet18', 'augmented': True, 'weight_decay': 0.0001, 'img_res': 448, 'tl_freeze': False, 'cnn_layers': 0, 'cnn_channels': 128, 'pretrained': True, 'two_nets': True, 'link_layer': 'layer3', 'dataset_norm': 'avgpool', 'aug_profile': 'withRotation_PCA1.5'}\n",
-      "models/b3ab7356a053eff487113d9695c968dc9cd8c6eb4cc3d48b063b7047\n"
+      "{'image_path': 'INHS_cropped', 'suffix': 'biology_paper_cleaned_10max', 'img_res': 448, 'augmented': True, 'batchSize': 64, 'learning_rate': 5e-05, 'numOfTrials': 5, 'fc_layers': 1, 'modelType': 'BB', 'lambda': 0.01, 'unsupervisedOnTest': False, 'tl_model': 'ResNet18', 'link_layer': 'avgpool'}\n",
+      "models/9a4df5ecd1ff860cdec2a036564c0397425930d07a8b643a44d567db\n",
+      "{'image_path': 'INHS_cropped', 'suffix': 'biology_paper_cleaned_15max', 'img_res': 448, 'augmented': True, 'batchSize': 64, 'learning_rate': 5e-05, 'numOfTrials': 5, 'fc_layers': 1, 'modelType': 'BB', 'lambda': 0.01, 'unsupervisedOnTest': False, 'tl_model': 'ResNet18', 'link_layer': 'avgpool'}\n",
+      "models/5cd462b25aa09098abc5d22aed2073e6453fb6cf2e41bb9483b57b0f\n",
+      "{'image_path': 'INHS_cropped', 'suffix': 'biology_paper_cleaned_30max', 'img_res': 448, 'augmented': True, 'batchSize': 64, 'learning_rate': 5e-05, 'numOfTrials': 5, 'fc_layers': 1, 'modelType': 'BB', 'lambda': 0.01, 'unsupervisedOnTest': False, 'tl_model': 'ResNet18', 'link_layer': 'avgpool'}\n",
+      "models/24e6c4f46fb7a075071fae0d6e555cc1c49081fb8d98feffcdf7ddfc\n",
+      "{'image_path': 'INHS_cropped', 'suffix': 'biology_paper_cleaned_50max', 'img_res': 448, 'augmented': True, 'batchSize': 64, 'learning_rate': 5e-05, 'numOfTrials': 5, 'fc_layers': 1, 'modelType': 'BB', 'lambda': 0.01, 'unsupervisedOnTest': False, 'tl_model': 'ResNet18', 'link_layer': 'avgpool'}\n",
+      "models/69200ddbc890ccf5095a4d7f1a72e9be51a9144bebc6b63dd42af79e\n",
+      "{'image_path': 'INHS_cropped', 'suffix': 'biology_paper_cleaned_100max', 'img_res': 448, 'augmented': True, 'batchSize': 64, 'learning_rate': 5e-05, 'numOfTrials': 5, 'fc_layers': 1, 'modelType': 'BB', 'lambda': 0.01, 'unsupervisedOnTest': False, 'tl_model': 'ResNet18', 'link_layer': 'avgpool'}\n",
+      "models/504a390493ba13c15ec12475aad8759665f05ab75a0647645d0bcf60\n",
+      "{'image_path': 'INHS_cropped', 'suffix': 'biology_paper_cleaned_200max', 'img_res': 448, 'augmented': True, 'batchSize': 64, 'learning_rate': 5e-05, 'numOfTrials': 5, 'fc_layers': 1, 'modelType': 'BB', 'lambda': 0.01, 'unsupervisedOnTest': False, 'tl_model': 'ResNet18', 'link_layer': 'avgpool'}\n",
+      "models/14d8a5a8e5a77d6444960771f32fe992974f3492231b85718b4b2072\n"
      ]
     }
    ],
