--- a/HGNN/train/Fix parameters.ipynb
+++ b/HGNN/train/Fix parameters.ipynb
@@ -37,7 +37,7 @@
    "source": [
     "experimentsPath=\"/home/elhamod/HGNN/experiments/\"\n",
     "dataPath=\"/data/BGNN_data\"\n",
-    "experimentName=\"biology_paper_unsupervised\"\n",
+    "experimentName=\"biology_paper_datasizes\"\n",
     "\n",
     "cuda=6"
    ]
