initial adaptive smoothing

--- a/HGNN/train/ConfigParserWriter-GridExperiments.ipynb
+++ b/HGNN/train/ConfigParserWriter-GridExperiments.ipynb
@@ -29,7 +29,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "experimentName = \"biology_paper_datasizes_HGNN_bestLambda\"\n",
+    "experimentName = \"biology_paper_adaptive_smoothing_test2\"\n",
     "\n",
     "\n",
     "# When adding a new parameter:\n",
@@ -41,26 +41,28 @@
     "params = {\n",
     "    # Do not change for multi/hyperp experiments\n",
     "    \"image_path\": \"INHS_cropped\", # \"/data/BGNN_data/CIFAR\", # \"/data/BGNN_data/INHS_cropped\",\n",
-    "    \"suffix\":'biology_paper', #  #'11', '52', None # used to get a subset cleaned_metadata file. set to None otherwise to use full metadata\n",
+    "    \"suffix\":'biology_paper_cleaned_50max', #  None # used to get a subset cleaned_metadata file. set to None otherwise to use full metadata\n",
     "    \n",
     "    # dataset\n",
     "    \"img_res\": 448, \n",
     "    \"augmented\": True,\n",
     "\n",
     "    # training\n",
-    "    \"batchSize\": 64, # Bigger is more stable\n",
-    "    \"learning_rate\":0.00005, # 0.00005\n",
-    "    \"numOfTrials\":5,\n",
+    "    \"batchSize\": 128, # Bigger is more stable (256)\n",
+    "    \"learning_rate\":0.0001, # 0.00005\n",
+    "    \"numOfTrials\":1,\n",
     "    \"fc_layers\": 1,\n",
-    "    \"modelType\":\"BB\", #BB DISCO DSN HGNN HGNN_add HGNN_cat\n",
+    "    \"modelType\":\"HGNN_add\", #BB DISCO DSN HGNN HGNN_add HGNN_cat\n",
     "    \"lambda\": 0.01,\n",
     "    \"unsupervisedOnTest\": False,\n",
     "    \"tl_model\": \"ResNet18\", # Keep 'ResNet18', 'ResNet50', 'CIFAR', 'NIN'\n",
     "    \"link_layer\": \"avgpool\", # layer name should be consistent with tl_model layer names. avgpool,\"layer3\"\n",
+    "    \n",
+    "    \"adaptive_smoothing\": True,\n",
     "}\n",
     "\n",
     "experimentsPath=\"/home/elhamod/HGNN/experiments/\"\n",
-    "dataPath=\"/home/elhamod/HGNN/data\""
+    "dataPath=\"/raid/elhamod/Fish\""
    ]
   },
   {
@@ -78,7 +80,7 @@
     {
      "data": {
       "text/plain": [
-       "'/home/elhamod/HGNN/experiments/biology_paper_datasizes_BB_bestLambda/params.json'"
+       "'/home/elhamod/HGNN/experiments/biology_paper_adaptive_smoothing_test2/params.json'"
       ]
      },
      "execution_count": 3,
@@ -92,15 +94,15 @@
     "hyperp_params = {\n",
     "#     \"modelType\":[\"BB\",\"HGNN_cat\"]\n",
     "#     \"dummy\":[0]\n",
-    "    \"suffix\":[\"biology_paper_cleaned_10max\",\n",
-    "              \"biology_paper_cleaned_15max\",\n",
-    "              \"biology_paper_cleaned_30max\",\n",
-    "              \"biology_paper_cleaned_50max\",\n",
-    "              \"biology_paper_cleaned_100max\",\n",
-    "              \"biology_paper_cleaned_200max\",],\n",
+    "#     \"suffix\":[#\"biology_paper_cleaned_10max\",\n",
+    "# #               \"biology_paper_cleaned_15max\",\n",
+    "#               #\"biology_paper_cleaned_30max\",\n",
+    "#               \"biology_paper_cleaned_50max\",\n",
+    "#               #\"biology_paper_cleaned_100max\",\n",
+    "#               \"biology_paper_cleaned_200max\",],\n",
     "    \n",
     "#     \"img_res\": [448],\n",
-    "#     \"learning_rate\": [0.00005, 0.0001, 0.0005, 0.001, 0.01, 0.1],\n",
+    "#     \"learning_rate\": [0.0001, 0.001, 0.01, 0.1],\n",
     "#     \"weight_decay\": [0.0001],\n",
     "#     \"kernelSize\": [5, 9],\n",
     "#     \"useZCAWhitening\": [False, True],\n",
@@ -111,6 +113,7 @@
     "#     \"augmented\": [True, False]\n",
     "#     \"lambda\": [0, 0.25, 0.75, 1, 4, 50]\n",
     "#     'modelType': ['BB', 'DISCO', 'HGNN']\n",
+    "     \"adaptive_smoothing\": [True],\n",
     "}\n",
     "\n",
     "cp.write(params, hyperp_params, \"Grid\")"
@@ -125,18 +128,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'image_path': 'INHS_cropped', 'suffix': 'biology_paper_cleaned_10max', 'img_res': 448, 'augmented': True, 'batchSize': 64, 'learning_rate': 5e-05, 'numOfTrials': 5, 'fc_layers': 1, 'modelType': 'BB', 'lambda': 0.01, 'unsupervisedOnTest': False, 'tl_model': 'ResNet18', 'link_layer': 'avgpool'}\n",
-      "models/9a4df5ecd1ff860cdec2a036564c0397425930d07a8b643a44d567db\n",
-      "{'image_path': 'INHS_cropped', 'suffix': 'biology_paper_cleaned_15max', 'img_res': 448, 'augmented': True, 'batchSize': 64, 'learning_rate': 5e-05, 'numOfTrials': 5, 'fc_layers': 1, 'modelType': 'BB', 'lambda': 0.01, 'unsupervisedOnTest': False, 'tl_model': 'ResNet18', 'link_layer': 'avgpool'}\n",
-      "models/5cd462b25aa09098abc5d22aed2073e6453fb6cf2e41bb9483b57b0f\n",
-      "{'image_path': 'INHS_cropped', 'suffix': 'biology_paper_cleaned_30max', 'img_res': 448, 'augmented': True, 'batchSize': 64, 'learning_rate': 5e-05, 'numOfTrials': 5, 'fc_layers': 1, 'modelType': 'BB', 'lambda': 0.01, 'unsupervisedOnTest': False, 'tl_model': 'ResNet18', 'link_layer': 'avgpool'}\n",
-      "models/24e6c4f46fb7a075071fae0d6e555cc1c49081fb8d98feffcdf7ddfc\n",
-      "{'image_path': 'INHS_cropped', 'suffix': 'biology_paper_cleaned_50max', 'img_res': 448, 'augmented': True, 'batchSize': 64, 'learning_rate': 5e-05, 'numOfTrials': 5, 'fc_layers': 1, 'modelType': 'BB', 'lambda': 0.01, 'unsupervisedOnTest': False, 'tl_model': 'ResNet18', 'link_layer': 'avgpool'}\n",
-      "models/69200ddbc890ccf5095a4d7f1a72e9be51a9144bebc6b63dd42af79e\n",
-      "{'image_path': 'INHS_cropped', 'suffix': 'biology_paper_cleaned_100max', 'img_res': 448, 'augmented': True, 'batchSize': 64, 'learning_rate': 5e-05, 'numOfTrials': 5, 'fc_layers': 1, 'modelType': 'BB', 'lambda': 0.01, 'unsupervisedOnTest': False, 'tl_model': 'ResNet18', 'link_layer': 'avgpool'}\n",
-      "models/504a390493ba13c15ec12475aad8759665f05ab75a0647645d0bcf60\n",
-      "{'image_path': 'INHS_cropped', 'suffix': 'biology_paper_cleaned_200max', 'img_res': 448, 'augmented': True, 'batchSize': 64, 'learning_rate': 5e-05, 'numOfTrials': 5, 'fc_layers': 1, 'modelType': 'BB', 'lambda': 0.01, 'unsupervisedOnTest': False, 'tl_model': 'ResNet18', 'link_layer': 'avgpool'}\n",
-      "models/14d8a5a8e5a77d6444960771f32fe992974f3492231b85718b4b2072\n"
+      "{'image_path': 'INHS_cropped', 'suffix': 'biology_paper_cleaned_50max', 'img_res': 448, 'augmented': True, 'batchSize': 128, 'learning_rate': 0.0001, 'numOfTrials': 1, 'fc_layers': 1, 'modelType': 'HGNN_add', 'lambda': 0.01, 'unsupervisedOnTest': False, 'tl_model': 'ResNet18', 'link_layer': 'avgpool', 'adaptive_smoothing': True, 'adaptive_lambda': 0.1, 'adaptive_alpha': 0.9}\n",
+      "models/738bc633fb73e4291620f644820448d6a3355a59e9a915da6f9efd83\n"
      ]
     }
    ],
