GPU fixes adaptive smoothing balancing fix flashtorch optimizatins and fixes Loss surface plotter trajectory dataset creation stream lining optimizations CSV reading improvements

--- a/HGNN/train/ConfigParserWriter-GridExperiments.ipynb
+++ b/HGNN/train/ConfigParserWriter-GridExperiments.ipynb
@@ -29,7 +29,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "experimentName = \"biology_paper_adaptive_smoothing_test2\"\n",
+    "experimentName = \"biology_paper_adaptive_smoothing_compareBestLambda\"\n",
     "\n",
     "\n",
     "# When adding a new parameter:\n",
@@ -48,9 +48,9 @@
     "    \"augmented\": True,\n",
     "\n",
     "    # training\n",
-    "    \"batchSize\": 128, # Bigger is more stable (256)\n",
+    "    \"batchSize\": 64, # Bigger is more stable (256)\n",
     "    \"learning_rate\":0.0001, # 0.00005\n",
-    "    \"numOfTrials\":1,\n",
+    "    \"numOfTrials\":5,\n",
     "    \"fc_layers\": 1,\n",
     "    \"modelType\":\"HGNN_add\", #BB DISCO DSN HGNN HGNN_add HGNN_cat\n",
     "    \"lambda\": 0.01,\n",
@@ -59,6 +59,7 @@
     "    \"link_layer\": \"avgpool\", # layer name should be consistent with tl_model layer names. avgpool,\"layer3\"\n",
     "    \n",
     "    \"adaptive_smoothing\": True,\n",
+    "    \"adaptive_lambda\": 0.01,\n",
     "}\n",
     "\n",
     "experimentsPath=\"/home/elhamod/HGNN/experiments/\"\n",
@@ -80,7 +81,7 @@
     {
      "data": {
       "text/plain": [
-       "'/home/elhamod/HGNN/experiments/biology_paper_adaptive_smoothing_test2/params.json'"
+       "'/home/elhamod/HGNN/experiments/biology_paper_adaptive_smoothing_compareSameLambda/params.json'"
       ]
      },
      "execution_count": 3,
@@ -113,7 +114,8 @@
     "#     \"augmented\": [True, False]\n",
     "#     \"lambda\": [0, 0.25, 0.75, 1, 4, 50]\n",
     "#     'modelType': ['BB', 'DISCO', 'HGNN']\n",
-    "     \"adaptive_smoothing\": [True],\n",
+    "     \"adaptive_smoothing\": [True, False],\n",
+    "    \"lambda\": [True, False],\n",
     "}\n",
     "\n",
     "cp.write(params, hyperp_params, \"Grid\")"
@@ -128,8 +130,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'image_path': 'INHS_cropped', 'suffix': 'biology_paper_cleaned_50max', 'img_res': 448, 'augmented': True, 'batchSize': 128, 'learning_rate': 0.0001, 'numOfTrials': 1, 'fc_layers': 1, 'modelType': 'HGNN_add', 'lambda': 0.01, 'unsupervisedOnTest': False, 'tl_model': 'ResNet18', 'link_layer': 'avgpool', 'adaptive_smoothing': True, 'adaptive_lambda': 0.1, 'adaptive_alpha': 0.9}\n",
-      "models/738bc633fb73e4291620f644820448d6a3355a59e9a915da6f9efd83\n"
+      "{'image_path': 'INHS_cropped', 'suffix': 'biology_paper_cleaned_50max', 'img_res': 448, 'augmented': True, 'batchSize': 64, 'learning_rate': 0.0001, 'numOfTrials': 5, 'fc_layers': 1, 'modelType': 'HGNN_add', 'lambda': True, 'unsupervisedOnTest': False, 'tl_model': 'ResNet18', 'link_layer': 'avgpool', 'adaptive_smoothing': True, 'adaptive_lambda': 0.01, 'adaptive_alpha': 0.9}\n",
+      "models/9da963f892577f1816af7c580ecd21ba634b87233f8d09604f719641\n",
+      "{'image_path': 'INHS_cropped', 'suffix': 'biology_paper_cleaned_50max', 'img_res': 448, 'augmented': True, 'batchSize': 64, 'learning_rate': 0.0001, 'numOfTrials': 5, 'fc_layers': 1, 'modelType': 'HGNN_add', 'lambda': False, 'unsupervisedOnTest': False, 'tl_model': 'ResNet18', 'link_layer': 'avgpool', 'adaptive_smoothing': True, 'adaptive_lambda': 0.01, 'adaptive_alpha': 0.9}\n",
+      "models/6885b9e794a2e17dd2665f7f86083dc98c5105402ea9dc1312d7b343\n",
+      "{'image_path': 'INHS_cropped', 'suffix': 'biology_paper_cleaned_50max', 'img_res': 448, 'augmented': True, 'batchSize': 64, 'learning_rate': 0.0001, 'numOfTrials': 5, 'fc_layers': 1, 'modelType': 'HGNN_add', 'lambda': True, 'unsupervisedOnTest': False, 'tl_model': 'ResNet18', 'link_layer': 'avgpool', 'adaptive_smoothing': False, 'adaptive_lambda': 0.01, 'adaptive_alpha': 0.9}\n",
+      "models/8acb70ece3ffcdb934303d4fbb76edfbf4a16ef43912aca6e960b2b1\n",
+      "{'image_path': 'INHS_cropped', 'suffix': 'biology_paper_cleaned_50max', 'img_res': 448, 'augmented': True, 'batchSize': 64, 'learning_rate': 0.0001, 'numOfTrials': 5, 'fc_layers': 1, 'modelType': 'HGNN_add', 'lambda': False, 'unsupervisedOnTest': False, 'tl_model': 'ResNet18', 'link_layer': 'avgpool', 'adaptive_smoothing': False, 'adaptive_lambda': 0.01, 'adaptive_alpha': 0.9}\n",
+      "models/9f9613417ae6800d692639ec6b14059c8d9a5f3609670b3b6b832b2f\n"
      ]
     }
    ],
