--- a/HGNN/train/ConfigParserWriter-SelectExperiments.ipynb
+++ b/HGNN/train/ConfigParserWriter-SelectExperiments.ipynb
@@ -29,7 +29,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "experimentName = \"biology_paper_datasizes\"\n",
+    "experimentName = \"biology_paper_medium_curated3_50_30_moregenus\"\n",
     "\n",
     "\n",
     "# When adding a new parameter:\n",
@@ -40,27 +40,31 @@
     "# Do not change the order!\n",
     "params = {\n",
     "    # Do not change for multi/hyperp experiments\n",
-    "    \"image_path\": \"INHS_cropped\", # \"/data/BGNN_data/CIFAR\", # \"/data/BGNN_data/INHS_cropped\",\n",
-    "    \"suffix\":'biology_paper', #  #'11', '52', None # used to get a subset cleaned_metadata file. set to None otherwise to use full metadata\n",
+    "    \"image_path\": \"Curated3/Hard\", # \"/data/BGNN_data/CIFAR\", # \"/data/BGNN_data/INHS_cropped\",\n",
+    "    \"suffix\":'curated_30_50', #  None # used to get a subset cleaned_metadata file. set to None otherwise to use full metadata\n",
     "    \n",
     "    # dataset\n",
     "    \"img_res\": 448, \n",
     "    \"augmented\": True,\n",
     "\n",
     "    # training\n",
-    "    \"batchSize\": 16, # Bigger is more stable\n",
-    "    \"learning_rate\":0.00005, # 0.00005\n",
+    "    \"batchSize\": 64, # Bigger is more stable (256)\n",
+    "    \"learning_rate\":0.0001, # 0.00005\n",
     "    \"numOfTrials\":5,\n",
     "    \"fc_layers\": 1,\n",
     "    \"modelType\":\"HGNN_add\", #BB DISCO DSN HGNN HGNN_add HGNN_cat\n",
-    "    \"lambda\": 0.6,\n",
+    "    \"lambda\": 0.01,\n",
     "    \"unsupervisedOnTest\": False,\n",
     "    \"tl_model\": \"ResNet18\", # Keep 'ResNet18', 'ResNet50', 'CIFAR', 'NIN'\n",
     "    \"link_layer\": \"avgpool\", # layer name should be consistent with tl_model layer names. avgpool,\"layer3\"\n",
+    "    \n",
+    "    \"adaptive_smoothing\": True,\n",
+    "    \"adaptive_lambda\": 0.01, #optimized for time\n",
+    "    \"adaptive_alpha\": 0.9, #optimized for time\n",
     "}\n",
     "\n",
-    "experimentsPath=\"/home/elhamod/HGNN/experiments/\"\n",
-    "dataPath=\"/home/elhamod/HGNN/data\""
+    "experimentsPath=\"/raid/elhamod/Fish/experiments/\"\n",
+    "dataPath=\"/raid/elhamod/Fish\""
    ]
   },
   {
@@ -78,7 +82,7 @@
     {
      "data": {
       "text/plain": [
-       "'/home/elhamod/HGNN/experiments/biology_paper_datasizes/params.json'"
+       "'/raid/elhamod/Fish/experiments/biology_paper_medium_curated3_50_30_moregenus/params.json'"
       ]
      },
      "execution_count": 3,
@@ -102,9 +106,17 @@
     "#     {\"augmented\": False, \"aug_profile\": None }, \n",
     "#     {\"augmented\": True, \"aug_profile\": \"withRotation_PCA1.5\" },\n",
     "    \n",
-    "    {\"suffix\": 'biology_paper_cleaned_200max' }, \n",
-    "    {\"suffix\": 'biology_paper_cleaned_100max' }, \n",
-    "    {\"suffix\": 'biology_paper_cleaned_50max' },\n",
+    "#      {\"modelType\": 'DISCO'}, ## BB\n",
+    "#      {\"modelType\": 'DSN'},\n",
+    "#      {\"modelType\": 'BB'},\n",
+    "     {\"adaptive_lambda\": 0.1, \"numOfTrials\":3,\"adaptive_alpha\":0.7},\n",
+    "     {\"adaptive_lambda\": 0.1, \"numOfTrials\":3,\"adaptive_alpha\":0.5},\n",
+    "     {\"adaptive_lambda\": 0.1, \"numOfTrials\":3,\"adaptive_alpha\":0.1},\n",
+    "     {\"adaptive_lambda\": 0.1, \"numOfTrials\":3,\"adaptive_alpha\":0.9},\n",
+    "#     {\"adaptive_smoothing\": False, \"lambda\": 0.1}, ## HGNN constant lambda\n",
+    "#     {\"adaptive_smoothing\": False, \"lambda\": 0.01}, ## HGNN constant lambda smaller\n",
+    "#     {\"adaptive_alpha\": 0.7, \"adaptive_lambda\": 0.01}, #HGNN adaptive smoothing\n",
+    "#     {\"adaptive_alpha\": 0.9, \"adaptive_lambda\": 0.01}, #HGNN more smooth higher alpha\n",
     "   \n",
     "    \n",
     "#     {'downsample': True, 'takeFromIntermediate': True, 'downsampleOutput':400, 'takeFromIntermediateOutput':400, \"fc_layers\": 2 }, #size\n",
@@ -136,12 +148,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'image_path': 'INHS_cropped', 'suffix': 'biology_paper_cleaned_200max', 'img_res': 448, 'augmented': True, 'batchSize': 16, 'learning_rate': 5e-05, 'numOfTrials': 5, 'fc_layers': 1, 'modelType': 'HGNN_add', 'lambda': 0.6, 'unsupervisedOnTest': False, 'tl_model': 'ResNet18', 'link_layer': 'avgpool', 'patience': 100, 'aug_profile': None}\n",
-      "models/4c3efd0b7279d82a7837e6cfa405fca4104493c4c7e58ecb793e1548\n",
-      "{'image_path': 'INHS_cropped', 'suffix': 'biology_paper_cleaned_100max', 'img_res': 448, 'augmented': True, 'batchSize': 16, 'learning_rate': 5e-05, 'numOfTrials': 5, 'fc_layers': 1, 'modelType': 'HGNN_add', 'lambda': 0.6, 'unsupervisedOnTest': False, 'tl_model': 'ResNet18', 'link_layer': 'avgpool', 'patience': 100, 'aug_profile': None}\n",
-      "models/cacbbd3bb696b263516f34f60bce96361fdfd695890081edc66261da\n",
-      "{'image_path': 'INHS_cropped', 'suffix': 'biology_paper_cleaned_50max', 'img_res': 448, 'augmented': True, 'batchSize': 16, 'learning_rate': 5e-05, 'numOfTrials': 5, 'fc_layers': 1, 'modelType': 'HGNN_add', 'lambda': 0.6, 'unsupervisedOnTest': False, 'tl_model': 'ResNet18', 'link_layer': 'avgpool', 'patience': 100, 'aug_profile': None}\n",
-      "models/92c80c25948a0b3aba549ff977c9f8e39b7ccda8b49d633c74b032dc\n"
+      "{'image_path': 'Curated3/Hard', 'suffix': 'curated_30_50', 'img_res': 448, 'augmented': True, 'batchSize': 64, 'learning_rate': 0.0001, 'numOfTrials': 3, 'fc_layers': 1, 'modelType': 'HGNN_add', 'lambda': 0.01, 'unsupervisedOnTest': False, 'tl_model': 'ResNet18', 'link_layer': 'avgpool', 'adaptive_smoothing': True, 'adaptive_lambda': 0.1, 'adaptive_alpha': 0.7}\n",
+      "models/61f6cf10dd18f11447e28d9adbe2913e06194c2ff036d74b0c14bf1e\n",
+      "{'image_path': 'Curated3/Hard', 'suffix': 'curated_30_50', 'img_res': 448, 'augmented': True, 'batchSize': 64, 'learning_rate': 0.0001, 'numOfTrials': 3, 'fc_layers': 1, 'modelType': 'HGNN_add', 'lambda': 0.01, 'unsupervisedOnTest': False, 'tl_model': 'ResNet18', 'link_layer': 'avgpool', 'adaptive_smoothing': True, 'adaptive_lambda': 0.1, 'adaptive_alpha': 0.5}\n",
+      "models/0f1d016fe1ed682bb40e30f3cce0d88b85ca26bcb86fb17c1fed5e05\n",
+      "{'image_path': 'Curated3/Hard', 'suffix': 'curated_30_50', 'img_res': 448, 'augmented': True, 'batchSize': 64, 'learning_rate': 0.0001, 'numOfTrials': 3, 'fc_layers': 1, 'modelType': 'HGNN_add', 'lambda': 0.01, 'unsupervisedOnTest': False, 'tl_model': 'ResNet18', 'link_layer': 'avgpool', 'adaptive_smoothing': True, 'adaptive_lambda': 0.1, 'adaptive_alpha': 0.1}\n",
+      "models/b066202ce70b7faa24757189f18219c133cc188c1746be6015d5a25b\n",
+      "{'image_path': 'Curated3/Hard', 'suffix': 'curated_30_50', 'img_res': 448, 'augmented': True, 'batchSize': 64, 'learning_rate': 0.0001, 'numOfTrials': 3, 'fc_layers': 1, 'modelType': 'HGNN_add', 'lambda': 0.01, 'unsupervisedOnTest': False, 'tl_model': 'ResNet18', 'link_layer': 'avgpool', 'adaptive_smoothing': True, 'adaptive_lambda': 0.1, 'adaptive_alpha': 0.9}\n",
+      "models/e5a6c83e0444ecc991a868e21f78cfe939eaf5690ba7f4ffdd355e31\n"
      ]
     }
    ],
