wandb nobackprop escort function hooks fix

--- a/HGNN/train/ConfigParserWriter-SelectExperiments.ipynb
+++ b/HGNN/train/ConfigParserWriter-SelectExperiments.ipynb
@@ -29,7 +29,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "experimentName = \"biology_paper_medium_curated3_50_30_moregenus\"\n",
+    "experimentName = \"biology_paper_curated4_Easy50_backprop_experiment\"\n",
     "\n",
     "\n",
     "# When adding a new parameter:\n",
@@ -40,15 +40,15 @@
     "# Do not change the order!\n",
     "params = {\n",
     "    # Do not change for multi/hyperp experiments\n",
-    "    \"image_path\": \"Curated3/Hard\", # \"/data/BGNN_data/CIFAR\", # \"/data/BGNN_data/INHS_cropped\",\n",
-    "    \"suffix\":'curated_30_50', #  None # used to get a subset cleaned_metadata file. set to None otherwise to use full metadata\n",
+    "    \"image_path\": \"Curated4/Easy_50\", # \"/data/BGNN_data/CIFAR\", # \"/data/BGNN_data/INHS_cropped\",\n",
+    "    \"suffix\":None, #\"curated_30_50\", #  None # used to get a subset cleaned_metadata file. set to None otherwise to use full metadata\n",
     "    \n",
     "    # dataset\n",
     "    \"img_res\": 448, \n",
     "    \"augmented\": True,\n",
     "\n",
     "    # training\n",
-    "    \"batchSize\": 64, # Bigger is more stable (256)\n",
+    "    \"batchSize\": 128, # Bigger is more stable (256)\n",
     "    \"learning_rate\":0.0001, # 0.00005\n",
     "    \"numOfTrials\":5,\n",
     "    \"fc_layers\": 1,\n",
@@ -61,6 +61,8 @@
     "    \"adaptive_smoothing\": True,\n",
     "    \"adaptive_lambda\": 0.01, #optimized for time\n",
     "    \"adaptive_alpha\": 0.9, #optimized for time\n",
+    "    \n",
+    "    \"noSpeciesBackprop\": False, \n",
     "}\n",
     "\n",
     "experimentsPath=\"/raid/elhamod/Fish/experiments/\"\n",
@@ -82,7 +84,7 @@
     {
      "data": {
       "text/plain": [
-       "'/raid/elhamod/Fish/experiments/biology_paper_medium_curated3_50_30_moregenus/params.json'"
+       "'/raid/elhamod/Fish/experiments/biology_paper_curated4_Easy50_backprop_experiment/params.json'"
       ]
      },
      "execution_count": 3,
@@ -107,12 +109,15 @@
     "#     {\"augmented\": True, \"aug_profile\": \"withRotation_PCA1.5\" },\n",
     "    \n",
     "#      {\"modelType\": 'DISCO'}, ## BB\n",
-    "#      {\"modelType\": 'DSN'},\n",
+    "#      {\"modelType\": 'HGNN_add', \"numOfTrials\":1, \"adaptive_alpha\": 0.1, \"adaptive_lambda\": 0.1},\n",
+    "     { \"noSpeciesBackprop\": True}\n",
+    "#     {\"modelType\": 'HGNN_add', \"numOfTrials\":1, \"adaptive_alpha\": 0.1, \"adaptive_lambda\": 0.01},\n",
     "#      {\"modelType\": 'BB'},\n",
-    "     {\"adaptive_lambda\": 0.1, \"numOfTrials\":3,\"adaptive_alpha\":0.7},\n",
-    "     {\"adaptive_lambda\": 0.1, \"numOfTrials\":3,\"adaptive_alpha\":0.5},\n",
-    "     {\"adaptive_lambda\": 0.1, \"numOfTrials\":3,\"adaptive_alpha\":0.1},\n",
-    "     {\"adaptive_lambda\": 0.1, \"numOfTrials\":3,\"adaptive_alpha\":0.9},\n",
+    "#      {\"modelType\": 'DSN'},\n",
+    "#      {\"adaptive_lambda\": 0.1, \"numOfTrials\":3,\"adaptive_alpha\":0.7},\n",
+    "#      {\"adaptive_lambda\": 0.1, \"numOfTrials\":3,\"adaptive_alpha\":0.5},\n",
+    "#      {\"adaptive_lambda\": 0.1, \"numOfTrials\":3,\"adaptive_alpha\":0.1},\n",
+    "#      {\"adaptive_lambda\": 0.1, \"numOfTrials\":3,\"adaptive_alpha\":0.9},\n",
     "#     {\"adaptive_smoothing\": False, \"lambda\": 0.1}, ## HGNN constant lambda\n",
     "#     {\"adaptive_smoothing\": False, \"lambda\": 0.01}, ## HGNN constant lambda smaller\n",
     "#     {\"adaptive_alpha\": 0.7, \"adaptive_lambda\": 0.01}, #HGNN adaptive smoothing\n",
@@ -148,14 +153,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'image_path': 'Curated3/Hard', 'suffix': 'curated_30_50', 'img_res': 448, 'augmented': True, 'batchSize': 64, 'learning_rate': 0.0001, 'numOfTrials': 3, 'fc_layers': 1, 'modelType': 'HGNN_add', 'lambda': 0.01, 'unsupervisedOnTest': False, 'tl_model': 'ResNet18', 'link_layer': 'avgpool', 'adaptive_smoothing': True, 'adaptive_lambda': 0.1, 'adaptive_alpha': 0.7}\n",
-      "models/61f6cf10dd18f11447e28d9adbe2913e06194c2ff036d74b0c14bf1e\n",
-      "{'image_path': 'Curated3/Hard', 'suffix': 'curated_30_50', 'img_res': 448, 'augmented': True, 'batchSize': 64, 'learning_rate': 0.0001, 'numOfTrials': 3, 'fc_layers': 1, 'modelType': 'HGNN_add', 'lambda': 0.01, 'unsupervisedOnTest': False, 'tl_model': 'ResNet18', 'link_layer': 'avgpool', 'adaptive_smoothing': True, 'adaptive_lambda': 0.1, 'adaptive_alpha': 0.5}\n",
-      "models/0f1d016fe1ed682bb40e30f3cce0d88b85ca26bcb86fb17c1fed5e05\n",
-      "{'image_path': 'Curated3/Hard', 'suffix': 'curated_30_50', 'img_res': 448, 'augmented': True, 'batchSize': 64, 'learning_rate': 0.0001, 'numOfTrials': 3, 'fc_layers': 1, 'modelType': 'HGNN_add', 'lambda': 0.01, 'unsupervisedOnTest': False, 'tl_model': 'ResNet18', 'link_layer': 'avgpool', 'adaptive_smoothing': True, 'adaptive_lambda': 0.1, 'adaptive_alpha': 0.1}\n",
-      "models/b066202ce70b7faa24757189f18219c133cc188c1746be6015d5a25b\n",
-      "{'image_path': 'Curated3/Hard', 'suffix': 'curated_30_50', 'img_res': 448, 'augmented': True, 'batchSize': 64, 'learning_rate': 0.0001, 'numOfTrials': 3, 'fc_layers': 1, 'modelType': 'HGNN_add', 'lambda': 0.01, 'unsupervisedOnTest': False, 'tl_model': 'ResNet18', 'link_layer': 'avgpool', 'adaptive_smoothing': True, 'adaptive_lambda': 0.1, 'adaptive_alpha': 0.9}\n",
-      "models/e5a6c83e0444ecc991a868e21f78cfe939eaf5690ba7f4ffdd355e31\n"
+      "{'image_path': 'Curated4/Easy_50', 'suffix': None, 'img_res': 448, 'augmented': True, 'batchSize': 128, 'learning_rate': 0.0001, 'numOfTrials': 5, 'fc_layers': 1, 'modelType': 'HGNN_add', 'lambda': 0.01, 'unsupervisedOnTest': False, 'tl_model': 'ResNet18', 'link_layer': 'avgpool', 'adaptive_smoothing': True, 'adaptive_lambda': 0.01, 'adaptive_alpha': 0.9, 'noSpeciesBackprop': True}\n",
+      "models/ce36de00b8cf711ffa27134b067a486f37f2ed233fc4dd1b837ca295\n"
      ]
     }
    ],
