fixes for flashtorch

--- a/HGNN/analyse/Calculate random accuracy.ipynb
+++ b/HGNN/analyse/Calculate random accuracy.ipynb
@@ -166,8 +166,9 @@
     "            classes = classes.cpu()\n",
     "        lbllist=torch.cat([lbllist,classes.float().view(-1)])\n",
     "        predlist=torch.cat([predlist, torch.FloatTensor(classes.size()[0]).random_(0, numberOffine)])\n",
-    "        \n",
-    "ts.addTrialPredictions(params, predlist, lbllist, range(numberOffine))\n",
+    "\n",
+    "labels =list(map(lambda x: x[1] + \" - \" + str(x[0]), enumerate(fineList)))\n",
+    "ts.addTrialPredictions(params, predlist, lbllist, labels)\n",
     "conf_mat = ts.printTrialConfusionMatrix(params, fineList, True)\n",
     "\n",
     "from sklearn.metrics import f1_score\n",
