--- a/HGNN/analyse/Saliency Maps - stats.ipynb
+++ b/HGNN/analyse/Saliency Maps - stats.ipynb
@@ -143,6 +143,10 @@
     "    raise Exception(\"Experiment not \" + trial_hash + \" found!\")\n",
     "experimentRecord = experiments_df[experiments_df[\"trialHash\"] == trial_hash]\n",
     "experiment_params = experimentRecord.to_dict('records')[0]\n",
+    "\n",
+    "# This is needed to get saliency map for a model that does not do back propagation.\n",
+    "experiment_params['noSpeciesBackprop'] = False \n",
+    "\n",
     "if math.isnan(experiment_params['suffix']):\n",
     "    experiment_params['suffix'] = None\n",
     "print(experiment_params)\n",
