--- a/HGNN/train/ConfigParserWriter-SelectExperiments.ipynb
+++ b/HGNN/train/ConfigParserWriter-SelectExperiments.ipynb
@@ -29,7 +29,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "experimentName = \"biology_paper_curated4_Easy50_backprop_experiment\"\n",
+    "experimentName = \"biology_paper_curated4_Easy50_studyGradients\"\n",
     "\n",
     "\n",
     "# When adding a new parameter:\n",
@@ -48,9 +48,9 @@
     "    \"augmented\": True,\n",
     "\n",
     "    # training\n",
-    "    \"batchSize\": 128, # Bigger is more stable (256)\n",
+    "    \"batchSize\": 16, # Bigger is more stable (256)\n",
     "    \"learning_rate\":0.0001, # 0.00005\n",
-    "    \"numOfTrials\":5,\n",
+    "    \"numOfTrials\":2,\n",
     "    \"fc_layers\": 1,\n",
     "    \"modelType\":\"HGNN_add\", #BB DISCO DSN HGNN HGNN_add HGNN_cat\n",
     "    \"lambda\": 0.01,\n",
@@ -59,8 +59,8 @@
     "    \"link_layer\": \"avgpool\", # layer name should be consistent with tl_model layer names. avgpool,\"layer3\"\n",
     "    \n",
     "    \"adaptive_smoothing\": True,\n",
-    "    \"adaptive_lambda\": 0.01, #optimized for time\n",
-    "    \"adaptive_alpha\": 0.9, #optimized for time\n",
+    "    \"adaptive_lambda\": 0.015, #optimized for time\n",
+    "    \"adaptive_alpha\": 0.8, #optimized for time\n",
     "    \n",
     "    \"noSpeciesBackprop\": False, \n",
     "}\n",
@@ -84,7 +84,7 @@
     {
      "data": {
       "text/plain": [
-       "'/raid/elhamod/Fish/experiments/biology_paper_curated4_Easy50_backprop_experiment/params.json'"
+       "'/raid/elhamod/Fish/experiments/biology_paper_curated4_Easy50_studyGradients/params.json'"
       ]
      },
      "execution_count": 3,
@@ -110,7 +110,9 @@
     "    \n",
     "#      {\"modelType\": 'DISCO'}, ## BB\n",
     "#      {\"modelType\": 'HGNN_add', \"numOfTrials\":1, \"adaptive_alpha\": 0.1, \"adaptive_lambda\": 0.1},\n",
-    "     { \"noSpeciesBackprop\": True}\n",
+    "     { \"modelType\": 'HGNN_add', \"fc_layers\": 1},\n",
+    "     { \"modelType\": 'BB', \"fc_layers\": 1},\n",
+    "     { \"modelType\": 'BB', \"fc_layers\": 2}\n",
     "#     {\"modelType\": 'HGNN_add', \"numOfTrials\":1, \"adaptive_alpha\": 0.1, \"adaptive_lambda\": 0.01},\n",
     "#      {\"modelType\": 'BB'},\n",
     "#      {\"modelType\": 'DSN'},\n",
@@ -153,8 +155,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'image_path': 'Curated4/Easy_50', 'suffix': None, 'img_res': 448, 'augmented': True, 'batchSize': 128, 'learning_rate': 0.0001, 'numOfTrials': 5, 'fc_layers': 1, 'modelType': 'HGNN_add', 'lambda': 0.01, 'unsupervisedOnTest': False, 'tl_model': 'ResNet18', 'link_layer': 'avgpool', 'adaptive_smoothing': True, 'adaptive_lambda': 0.01, 'adaptive_alpha': 0.9, 'noSpeciesBackprop': True}\n",
-      "models/ce36de00b8cf711ffa27134b067a486f37f2ed233fc4dd1b837ca295\n"
+      "{'image_path': 'Curated4/Easy_50', 'suffix': None, 'img_res': 448, 'augmented': True, 'batchSize': 16, 'learning_rate': 0.0001, 'numOfTrials': 2, 'fc_layers': 1, 'modelType': 'HGNN_add', 'lambda': 0.01, 'unsupervisedOnTest': False, 'tl_model': 'ResNet18', 'link_layer': 'avgpool', 'adaptive_smoothing': True, 'adaptive_lambda': 0.015, 'adaptive_alpha': 0.8, 'noSpeciesBackprop': False}\n",
+      "models/ec39cf27961d88407a2576ede1bf4c58ae9d28241c5f43e45ce1164d\n",
+      "{'image_path': 'Curated4/Easy_50', 'suffix': None, 'img_res': 448, 'augmented': True, 'batchSize': 16, 'learning_rate': 0.0001, 'numOfTrials': 2, 'fc_layers': 1, 'modelType': 'BB', 'lambda': 0.01, 'unsupervisedOnTest': False, 'tl_model': 'ResNet18', 'link_layer': 'avgpool', 'adaptive_smoothing': True, 'adaptive_lambda': 0.015, 'adaptive_alpha': 0.8, 'noSpeciesBackprop': False}\n",
+      "models/43cdc6aff3a7bb28d399a67febca64820d5fd2c77ba7fbb74c2f3c11\n",
+      "{'image_path': 'Curated4/Easy_50', 'suffix': None, 'img_res': 448, 'augmented': True, 'batchSize': 16, 'learning_rate': 0.0001, 'numOfTrials': 2, 'fc_layers': 2, 'modelType': 'BB', 'lambda': 0.01, 'unsupervisedOnTest': False, 'tl_model': 'ResNet18', 'link_layer': 'avgpool', 'adaptive_smoothing': True, 'adaptive_lambda': 0.015, 'adaptive_alpha': 0.8, 'noSpeciesBackprop': False}\n",
+      "models/6217abc41cf4519c1dccbf864ee1a5d9dd661979902dc96031acd5ed\n"
      ]
     }
    ],
