--- a/HGNN/train/Fix parameters.ipynb
+++ b/HGNN/train/Fix parameters.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,13 +31,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "experimentsPath=\"/home/elhamod/HGNN/experiments/\"\n",
-    "dataPath=\"/data/BGNN_data\"\n",
-    "experimentName=\"biology_paper_datasizes\"\n",
+    "experimentsPath=\"/raid/elhamod/Fish/experiments/\"\n",
+    "dataPath=\"/raid/elhamod/Fish/\"\n",
+    "experimentName=\"biology_paper_easy_curated4_Medium\"\n",
     "\n",
     "cuda=6"
    ]
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
     "\n",
     "# Keep same order as ConfigParserWriter!\n",
     "changes = {\n",
-    "    'numOfTrials': 5\n",
+    "    'noSpeciesBackprop': False\n",
     "}\n",
     "removes = []"
    ]
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,18 +104,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f83ea521d7114505af54c8ae78b9af23",
+       "model_id": "d1bdeef7a3424a4cbbdcdd4b1c808779",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, description='experiment', max=1.0, style=ProgressStyle(description_wid…"
+       "HBox(children=(FloatProgress(value=0.0, description='experiment', max=3.0, style=ProgressStyle(description_wid…"
       ]
      },
      "metadata": {},
@@ -124,7 +124,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d60c995ef8944785b53c3b53a3e32833",
+       "model_id": "2ef4ad7bc0234adb82253b5face29c1e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -139,11 +139,78 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "model models/851a38d450ef7fa69a8beee91cc444d9e8340bcd4061894986a36ebe could not be fixed to models/851a38d450ef7fa69a8beee91cc444d9e8340bcd4061894986a36ebe\n",
-      "model models/319c4d36922d8a300028265cf7b687f2242d89372de03b80145e819f could not be fixed to models/319c4d36922d8a300028265cf7b687f2242d89372de03b80145e819f\n",
-      "model models/77780f0986b84842e710a492cd33f37e4e79b4c9ed9b3801a03121c0 could not be fixed to models/77780f0986b84842e710a492cd33f37e4e79b4c9ed9b3801a03121c0\n",
-      "model models/761b7febc9bcd94bcae1e2cc87ae9606c158227a97dcbc1d51b6cd62 could not be fixed to models/761b7febc9bcd94bcae1e2cc87ae9606c158227a97dcbc1d51b6cd62\n",
-      "model models/f6b0634420e6d2e3b01f52b1ec03d57be61d609526b08af06a8cfeb3 could not be fixed to models/f6b0634420e6d2e3b01f52b1ec03d57be61d609526b08af06a8cfeb3\n",
+      "model /raid/elhamod/Fish/experiments/biology_paper_easy_curated4_Medium/models/44b7a85e063d736759f317afbf4da47220d7fa4f6cd02b5cd96a7a32 -> /raid/elhamod/Fish/experiments/biology_paper_easy_curated4_Medium/models/7c5553ab57de8ea7c22abee6033c9746c5cd2fa3b2c1ea5fcd75adbe updated\n",
+      "json /raid/elhamod/Fish/experiments/biology_paper_easy_curated4_Medium/models/7c5553ab57de8ea7c22abee6033c9746c5cd2fa3b2c1ea5fcd75adbe/params.json updated\n",
+      "model /raid/elhamod/Fish/experiments/biology_paper_easy_curated4_Medium/models/e1510d6d987b113c83a20b6da99bb3b0b97ac392721c2e3003f6e711 -> /raid/elhamod/Fish/experiments/biology_paper_easy_curated4_Medium/models/64bb30916efa6ebe01c82214e8c0686711fbafdce47aa7ff1826344d updated\n",
+      "json /raid/elhamod/Fish/experiments/biology_paper_easy_curated4_Medium/models/64bb30916efa6ebe01c82214e8c0686711fbafdce47aa7ff1826344d/params.json updated\n",
+      "model /raid/elhamod/Fish/experiments/biology_paper_easy_curated4_Medium/models/6a3d26b0dbafe3d2f913913c5bdc8859e63dbc74c1063e87011bbd05 -> /raid/elhamod/Fish/experiments/biology_paper_easy_curated4_Medium/models/df4b302f8ee7c3aa1e6f6b6f32e6ae3c0808ebba771ee14bda4198b9 updated\n",
+      "json /raid/elhamod/Fish/experiments/biology_paper_easy_curated4_Medium/models/df4b302f8ee7c3aa1e6f6b6f32e6ae3c0808ebba771ee14bda4198b9/params.json updated\n",
+      "model /raid/elhamod/Fish/experiments/biology_paper_easy_curated4_Medium/models/f55cb0c9e057110ed86fa3682cf08fb37b3d27d8046bc97c5546e880 -> /raid/elhamod/Fish/experiments/biology_paper_easy_curated4_Medium/models/40fdfa8fd2c78dafeec40130a327ab068161a27c8329432bb5842e7c updated\n",
+      "json /raid/elhamod/Fish/experiments/biology_paper_easy_curated4_Medium/models/40fdfa8fd2c78dafeec40130a327ab068161a27c8329432bb5842e7c/params.json updated\n",
+      "model /raid/elhamod/Fish/experiments/biology_paper_easy_curated4_Medium/models/3647ae459c78977d3d02492515d079123c1305d4aea1fbe4e45d2b2b -> /raid/elhamod/Fish/experiments/biology_paper_easy_curated4_Medium/models/75631a44387105fd97f64d9c1d9e6e28d6b5d7085ee41803179829df updated\n",
+      "json /raid/elhamod/Fish/experiments/biology_paper_easy_curated4_Medium/models/75631a44387105fd97f64d9c1d9e6e28d6b5d7085ee41803179829df/params.json updated\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0e5fa8a937f3475182ffb21e5a059064",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatProgress(value=0.0, description='trial', max=5.0, style=ProgressStyle(description_width='i…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "model /raid/elhamod/Fish/experiments/biology_paper_easy_curated4_Medium/models/5b37447d8a18a795d2d6da930c9783a47d75cbf4e7a4d00981e5bded -> /raid/elhamod/Fish/experiments/biology_paper_easy_curated4_Medium/models/ee13228d7c6eb1b2324bf3902a802a8df89df574c347e208bbb436b9 updated\n",
+      "json /raid/elhamod/Fish/experiments/biology_paper_easy_curated4_Medium/models/ee13228d7c6eb1b2324bf3902a802a8df89df574c347e208bbb436b9/params.json updated\n",
+      "model /raid/elhamod/Fish/experiments/biology_paper_easy_curated4_Medium/models/73610210e7696c62681af075f7522b635acdcff004ff37502db12bb9 -> /raid/elhamod/Fish/experiments/biology_paper_easy_curated4_Medium/models/ad2b4f04e479fbc990cfb07b5127bd9c259a93f2f04b60c38b89389e updated\n",
+      "json /raid/elhamod/Fish/experiments/biology_paper_easy_curated4_Medium/models/ad2b4f04e479fbc990cfb07b5127bd9c259a93f2f04b60c38b89389e/params.json updated\n",
+      "model /raid/elhamod/Fish/experiments/biology_paper_easy_curated4_Medium/models/0186a956166df039378f0a7d02bbbc74689b60499b4b443a80d05fa9 -> /raid/elhamod/Fish/experiments/biology_paper_easy_curated4_Medium/models/73a5ac62c833bd6dfa45a55f3d5d75e638b15fc67191685e1aac20aa updated\n",
+      "json /raid/elhamod/Fish/experiments/biology_paper_easy_curated4_Medium/models/73a5ac62c833bd6dfa45a55f3d5d75e638b15fc67191685e1aac20aa/params.json updated\n",
+      "model /raid/elhamod/Fish/experiments/biology_paper_easy_curated4_Medium/models/5f409ed8e91c10e2578493bc71be35bb99607593b29972792d80dfbb -> /raid/elhamod/Fish/experiments/biology_paper_easy_curated4_Medium/models/496e2a040ab9601815f57f6e09270ff060ca6ef37d68c73e5ff76b7b updated\n",
+      "json /raid/elhamod/Fish/experiments/biology_paper_easy_curated4_Medium/models/496e2a040ab9601815f57f6e09270ff060ca6ef37d68c73e5ff76b7b/params.json updated\n",
+      "model /raid/elhamod/Fish/experiments/biology_paper_easy_curated4_Medium/models/0cfbdfdf9e8c6ce08f41dd5d7e0bc74580791023907b4229151ebb08 -> /raid/elhamod/Fish/experiments/biology_paper_easy_curated4_Medium/models/b9902a0045dae3c0bbea122214a5d214d5fa1b3d4c8fdb87bfbf0bc4 updated\n",
+      "json /raid/elhamod/Fish/experiments/biology_paper_easy_curated4_Medium/models/b9902a0045dae3c0bbea122214a5d214d5fa1b3d4c8fdb87bfbf0bc4/params.json updated\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e1e3307be2c74b48b10573114602d5d5",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatProgress(value=0.0, description='trial', max=5.0, style=ProgressStyle(description_width='i…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "model /raid/elhamod/Fish/experiments/biology_paper_easy_curated4_Medium/models/a168942edfe62c0a3cb27e9141b455fc6ecf5b6ad661d053d27a304a -> /raid/elhamod/Fish/experiments/biology_paper_easy_curated4_Medium/models/582ad659eb796c3591ac9b51cd98c4e54884c95d6044feaf3c4eaec0 updated\n",
+      "json /raid/elhamod/Fish/experiments/biology_paper_easy_curated4_Medium/models/582ad659eb796c3591ac9b51cd98c4e54884c95d6044feaf3c4eaec0/params.json updated\n",
+      "model /raid/elhamod/Fish/experiments/biology_paper_easy_curated4_Medium/models/57ea8c75e9c2923f00610b2078a7935a75db66a55841c36e5c52e532 -> /raid/elhamod/Fish/experiments/biology_paper_easy_curated4_Medium/models/d54709aa61527b46121b14f871475b4bd7cc2a5134eef6545658355e updated\n",
+      "json /raid/elhamod/Fish/experiments/biology_paper_easy_curated4_Medium/models/d54709aa61527b46121b14f871475b4bd7cc2a5134eef6545658355e/params.json updated\n",
+      "model /raid/elhamod/Fish/experiments/biology_paper_easy_curated4_Medium/models/0f30ad38db23f11d6e59cf18672aacb060e342958168886718fee7b0 -> /raid/elhamod/Fish/experiments/biology_paper_easy_curated4_Medium/models/ac8ee2c7f2e29316aacc7a62f60d9515d997b62912e9fa666e53bf64 updated\n",
+      "json /raid/elhamod/Fish/experiments/biology_paper_easy_curated4_Medium/models/ac8ee2c7f2e29316aacc7a62f60d9515d997b62912e9fa666e53bf64/params.json updated\n",
+      "model /raid/elhamod/Fish/experiments/biology_paper_easy_curated4_Medium/models/582153c10bb0e4dfd3597e92ac0da07fb88c14dc601139bd9aa5c47c -> /raid/elhamod/Fish/experiments/biology_paper_easy_curated4_Medium/models/319c12a73e653fcc25f6dba750c447a5b127fc1ffdbe8e1696a951a9 updated\n",
+      "json /raid/elhamod/Fish/experiments/biology_paper_easy_curated4_Medium/models/319c12a73e653fcc25f6dba750c447a5b127fc1ffdbe8e1696a951a9/params.json updated\n",
+      "model /raid/elhamod/Fish/experiments/biology_paper_easy_curated4_Medium/models/47e06e75ceade1f7391d552dbe82f10b33e66211ef718e02c755dc49 -> /raid/elhamod/Fish/experiments/biology_paper_easy_curated4_Medium/models/c3d9096b16107f1f5110d6f7358a5c7f9ac1fd6e223cd38c0d4b0b64 updated\n",
+      "json /raid/elhamod/Fish/experiments/biology_paper_easy_curated4_Medium/models/c3d9096b16107f1f5110d6f7358a5c7f9ac1fd6e223cd38c0d4b0b64/params.json updated\n",
       "\n",
       "\n"
      ]
@@ -203,18 +270,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "61aaf6d7fef54c3192f367ef0ae2fd40",
+       "model_id": "fc7f69935f1b4aadade1e559c25c5ff5",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, description='experiment', max=1.0, style=ProgressStyle(description_wid…"
+       "HBox(children=(FloatProgress(value=0.0, description='experiment', max=3.0, style=ProgressStyle(description_wid…"
       ]
      },
      "metadata": {},
@@ -224,7 +291,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "result d8e8f65e9b77352ccb8e1a46c62deb747b315c8413f87211a3521e23 could not be fixed to d8e8f65e9b77352ccb8e1a46c62deb747b315c8413f87211a3521e23\n",
+      "result 9c0473ffd9835bbb11c86fe1a7a81b8d266ebf2d05424c808254b3aa could not be fixed to e038ec76e27af102775f1c996ec1656c3a1a3da7ee222933c83f3cf8\n",
+      "result /raid/elhamod/Fish/experiments/biology_paper_easy_curated4_Medium/results/3d489de055d56e86e143c33b0fb5457c8fa4ab4cd85c8db8d95b16df -> /raid/elhamod/Fish/experiments/biology_paper_easy_curated4_Medium/results/82953d4489fca9af0efa6a8e3a815172a24a6f97969b70ef0902b878 updated\n",
+      "json /raid/elhamod/Fish/experiments/biology_paper_easy_curated4_Medium/results/82953d4489fca9af0efa6a8e3a815172a24a6f97969b70ef0902b878/params.json updated\n",
+      "result /raid/elhamod/Fish/experiments/biology_paper_easy_curated4_Medium/results/f909b1ae626c5ea0c35ce9bcf057f61034c8cc25ae268910f25c9502 -> /raid/elhamod/Fish/experiments/biology_paper_easy_curated4_Medium/results/a5ebbe208fd77f10b532d2ee86a00700eb5a14624204a1b5a1e2aa1f updated\n",
+      "json /raid/elhamod/Fish/experiments/biology_paper_easy_curated4_Medium/results/a5ebbe208fd77f10b532d2ee86a00700eb5a14624204a1b5a1e2aa1f/params.json updated\n",
       "\n"
      ]
     }
@@ -275,18 +346,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "957b3ad882f7462ebcc27e9402ce6837",
+       "model_id": "1b6efc475aff47bbad7f39ab0117323e",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, description='experiment', max=1.0, style=ProgressStyle(description_wid…"
+       "HBox(children=(FloatProgress(value=0.0, description='experiment', max=3.0, style=ProgressStyle(description_wid…"
       ]
      },
      "metadata": {},
@@ -295,7 +366,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9ceaa04fe29749c493b32640e729e17e",
+       "model_id": "bf8f44408c024511bb1cef332e947a44",
        "version_major": 2,
        "version_minor": 0
       },
@@ -310,7 +381,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
+      "trialHash 44b7a85e063d736759f317afbf4da47220d7fa4f6cd02b5cd96a7a32 could not be updated!\n",
+      "trialHash e1510d6d987b113c83a20b6da99bb3b0b97ac392721c2e3003f6e711 could not be updated!\n",
+      "trialHash 6a3d26b0dbafe3d2f913913c5bdc8859e63dbc74c1063e87011bbd05 could not be updated!\n",
+      "trialHash f55cb0c9e057110ed86fa3682cf08fb37b3d27d8046bc97c5546e880 could not be updated!\n",
+      "trialHash 3647ae459c78977d3d02492515d079123c1305d4aea1fbe4e45d2b2b could not be updated!\n",
       "\n"
      ]
     },
@@ -318,7 +393,61 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/elhamod/melhamodenv3/lib/python3.6/site-packages/ipykernel_launcher.py:23: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n"
+      "/home/elhamod/melhamodenv3/lib/python3.6/site-packages/ipykernel_launcher.py:23: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "/home/elhamod/melhamodenv3/lib/python3.6/site-packages/ipykernel_launcher.py:28: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e9ad50d1eb9f4be8aad6370a746df95c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatProgress(value=0.0, description='trial', max=5.0, style=ProgressStyle(description_width='i…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "trialHash 5b37447d8a18a795d2d6da930c9783a47d75cbf4e7a4d00981e5bded could not be updated!\n",
+      "trialHash 73610210e7696c62681af075f7522b635acdcff004ff37502db12bb9 could not be updated!\n",
+      "trialHash 0186a956166df039378f0a7d02bbbc74689b60499b4b443a80d05fa9 could not be updated!\n",
+      "trialHash 5f409ed8e91c10e2578493bc71be35bb99607593b29972792d80dfbb could not be updated!\n",
+      "trialHash 0cfbdfdf9e8c6ce08f41dd5d7e0bc74580791023907b4229151ebb08 could not be updated!\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "35f006518bf043359da90d6261e5bace",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatProgress(value=0.0, description='trial', max=5.0, style=ProgressStyle(description_width='i…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "trialHash a168942edfe62c0a3cb27e9141b455fc6ecf5b6ad661d053d27a304a could not be updated!\n",
+      "trialHash 57ea8c75e9c2923f00610b2078a7935a75db66a55841c36e5c52e532 could not be updated!\n",
+      "trialHash 0f30ad38db23f11d6e59cf18672aacb060e342958168886718fee7b0 could not be updated!\n",
+      "trialHash 582153c10bb0e4dfd3597e92ac0da07fb88c14dc601139bd9aa5c47c could not be updated!\n",
+      "trialHash 47e06e75ceade1f7391d552dbe82f10b33e66211ef718e02c755dc49 could not be updated!\n",
+      "\n",
+      "\n"
      ]
     }
    ],
@@ -387,18 +516,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e86300ed5e2f44edac96721f002727b5",
+       "model_id": "669cd4a4f72044658b7c181e4a226b42",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, description='experiment', max=1.0, style=ProgressStyle(description_wid…"
+       "HBox(children=(FloatProgress(value=0.0, description='experiment', max=3.0, style=ProgressStyle(description_wid…"
       ]
      },
      "metadata": {},
@@ -408,9 +537,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'image_path': 'INHS_cropped', 'suffix': 'biology_paper_cleaned_50max', 'img_res': 448, 'augmented': True, 'batchSize': 64, 'learning_rate': 5e-05, 'numOfTrials': 5, 'fc_layers': 1, 'modelType': 'HGNN_add', 'lambda': 0.6, 'unsupervisedOnTest': True, 'tl_model': 'ResNet18', 'link_layer': 'avgpool'}\n",
+      "{'image_path': 'Curated4/Medium', 'suffix': 'curated_30_50', 'img_res': 448, 'augmented': True, 'batchSize': 64, 'learning_rate': 0.0001, 'numOfTrials': 5, 'fc_layers': 1, 'modelType': 'HGNN_add', 'lambda': 0.01, 'unsupervisedOnTest': False, 'tl_model': 'ResNet18', 'link_layer': 'avgpool', 'adaptive_smoothing': True, 'adaptive_lambda': 0.01, 'adaptive_alpha': 0.9, 'noSpeciesBackprop': False}\n",
+      "{'image_path': 'Curated4/Medium', 'suffix': 'curated_30_50', 'img_res': 448, 'augmented': True, 'batchSize': 64, 'learning_rate': 0.0001, 'numOfTrials': 5, 'fc_layers': 1, 'modelType': 'BB', 'lambda': 0.01, 'unsupervisedOnTest': False, 'tl_model': 'ResNet18', 'link_layer': 'avgpool', 'adaptive_smoothing': True, 'adaptive_lambda': 0.01, 'adaptive_alpha': 0.9, 'noSpeciesBackprop': False}\n",
+      "{'image_path': 'Curated4/Medium', 'suffix': 'curated_30_50', 'img_res': 448, 'augmented': True, 'batchSize': 64, 'learning_rate': 0.0001, 'numOfTrials': 5, 'fc_layers': 1, 'modelType': 'DSN', 'lambda': 0.01, 'unsupervisedOnTest': False, 'tl_model': 'ResNet18', 'link_layer': 'avgpool', 'adaptive_smoothing': True, 'adaptive_lambda': 0.01, 'adaptive_alpha': 0.9, 'noSpeciesBackprop': False}\n",
       "\n",
-      "json /home/elhamod/HGNN/experiments/biology_paper_unsupervised/params.json updated\n"
+      "json /raid/elhamod/Fish/experiments/biology_paper_easy_curated4_Medium/params.json updated\n"
      ]
     }
    ],
