--- a/HGNN/analyse/Loss surface plotter.ipynb
+++ b/HGNN/analyse/Loss surface plotter.ipynb
@@ -147,7 +147,7 @@
     "    for i in range(len(models)):\n",
     "        wm_ = loss_landscapes.wrap_model(models[i].cuda())\n",
     "        wm = wm_.get_module_parameters()\n",
-    "        scaled_model = loss_surface_plotter.scale_model(wm, wm_center, coord_Tracker.scaled_dirs_, normalize, DISTANCE, STEPS)\n",
+    "        scaled_model = loss_landscapes.scale_model(wm, wm_center, coord_Tracker.scaled_dirs_, normalize, DISTANCE, STEPS)\n",
     "        plt.plot(scaled_model[0], scaled_model[1], marker='o', markersize=4, color=\"blue\")\n",
     "        value = round(metric(wm_).item(),2)\n",
     "        if i%10 == 0 or i==len(models)-1:\n",
